@@ -1,6 +1,8 @@
 ver 0.21.24 (not yet released)
 * protocol
   - "tagtypes" requires no permissions
+* database
+  - simple: fix crash when mounting twice
 * fix unit test failure
 
 ver 0.21.23 (2020/04/23)
